# pinocchio-visualizers

./: .clang-format  .cmake-format.yaml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/pinocchio-visualizers/: base-visualizer.hpp  base-visualizer.hxx  namespace.hpp
include/pinocchio-visualizers/python/: visitor.hpp
pinocchio-visualizers/: base-visualizer.hpp
src/pinocchio-visualizers/: base-visualizer.cpp  base-visualizer.hpp
src/pinocchio-visualizers/python/: visitor.hpp
tests/: CMakeLists.txt  dummy.cpp
